# CoolProp

dev/ci/: ci_python_notes.md
wrappers/Python/: pyproject.toml  setup.py
